alignment of  fixed Search-menu

--- a/frontend/my-theaterlist-app/src/app/search-menu/search-menu.component.css
+++ b/frontend/my-theaterlist-app/src/app/search-menu/search-menu.component.css
@@ -1,7 +1,7 @@
 .searchMenu-flex-container {
   justify-content: space-around;
-  padding: 5px;
-  width: 100%;
+  padding-left: 50px;
+  width: 80%;
 }
 
 
